<resources>
    <string name="app_name">PlaneManager</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 2 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tail_number_hint">Tail number (e.g. HA-LXH)</string>
    <string name="plane_model_hint">Model (e.g. A321)</string>
    <string name="fabrication_year_hint">Fabrication year (e.g. 2006)</string>
    <string name="price_hint">Price (e.g. 455640000)</string>
    <string name="add_plane_btn_text">Add new plane</string>
    <string name="invalid_tail_number">Tail number must be > 4 characters</string>
    <string name="invalid_model">Plane model must be > 2 characters</string>
    <string name="invalid_fabrication_year">Fabrication year must be between 1950 and current year</string>
    <string name="invalid_price">Price must be > 0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tail_number_label">Tail number:</string>
    <string name="brand_label">Brand:</string>
    <string name="model_label">Model:</string>
    <string name="year_label">Year:</string>
    <string name="engine_label">Engine:</string>
    <string name="price_dollars_label">Price in $:</string>
    <string name="geolocation_button">GEOLOCATION</string>
    <string name="update_button">UPDATE</string>
    <string name="delete_button">DELETE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="tail_number">Tail Number</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="price">Price</string>
    <string name="plane_update_hint">Click on the plane values to change them!</string>
    <string name="brand">Brand</string>
    <string name="engine">Engine</string>
    <string name="logout">Logout</string>
    <string name="plane">Plane</string>
    <string name="drag_the_plane">Drag the plane! Don\'t be shy!</string>
</resources>
